# tricore-dev-env

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  manage.py
build-toolchain/: install.sh
examples/Blinky_LED_1_KIT_TC397_TFT/: Blinky_LED.c  CMakeLists.txt  manage.py  requirements.txt  tricore_toolchain.cmake
examples/FreeRTOS_TC397/: CMakeLists.txt  Cpu0_Main.c  tricore_toolchain.cmake
examples/FreeRTOS_TC397/Configurations/: FreeRTOSConfig.h
examples/FreeRTOS_TC397/Libraries/Infra/Ssw/TC39B/Tricore/: Ifx_Ssw_Tc2.c
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Ebu/BFlashSpansion/: IfxEbu_BFlashSpansion.c  IfxEbu_BFlashSpansion.h
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Ebu/Dram/: IfxEbu_Dram.c
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Ebu/Sram/: IfxEbu_Sram.h
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Ebu/Std/: IfxEbu.c
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Hspdm/Std/: IfxHspdm.h
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Hssl/Hssl/: IfxHssl_Hssl.c
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Hssl/Std/: IfxHssl.c
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Pms/Std/: IfxPmsPm.c  IfxPmsPm.h
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/Scu/Std/: IfxScuCcu.c  IfxScuRcu.c
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/_Impl/: IfxCpu_cfg.h  IfxEdsadc_cfg.h  IfxEvadc_cfg.h  IfxFlash_cfg.h  IfxGlobal_cfg.h  IfxGtm_cfg.h  IfxHspdm_cfg.c  IfxHssl_cfg.h  IfxLmu_cfg.h  IfxMsc_cfg.c  IfxMtu_cfg.h  IfxQspi_cfg.c  IfxRif_cfg.c  IfxSpu_cfg.c  IfxStm_cfg.c  IfxStm_cfg.h
examples/FreeRTOS_TC397/Libraries/iLLD/TC39B/Tricore/_PinMap/: IfxAsclin_PinMap.c  IfxAsclin_PinMap.h  IfxEdsadc_PinMap.h  IfxEvadc_PinMap.c  IfxEvadc_PinMap.h  IfxGtm_PinMap.c  IfxQspi_PinMap.c
flasher-tool/: Dockerfile  pregenerated-wine.tar  sources.list
project-template/: CMakeLists.txt  manage.py  tricore_toolchain.cmake
project-template/iLLD/iLLD_1_0_1_17_0_TC3xx_Compiler_Warnings/: iLLD_1_0_1_17_0_TC3xx_Dcc_Warnings.txt
project-template/iLLD/iLLD_1_0_1_17_0__TC33A/Src/BaseSw/Infra/Ssw/TC33A/Tricore/: Ifx_Ssw_Infra.h
project-template/iLLD/iLLD_1_0_1_17_0__TC33AED/Src/BaseSw/Infra/Sfr/TC33AED/_Reg/: IfxAgbt_bf.h  IfxAgbt_reg.h  IfxAgbt_regdef.h  IfxAsclin_bf.h  IfxAsclin_reg.h  IfxAsclin_regdef.h  IfxCan_bf.h  IfxCan_reg.h  IfxCan_regdef.h  IfxCbs_bf.h  IfxCbs_reg.h  IfxCbs_regdef.h  IfxCcu6_bf.h  IfxCcu6_reg.h  IfxCcu6_regdef.h  IfxConverter_bf.h  IfxConverter_reg.h  IfxConverter_regdef.h  IfxCpu_bf.h  IfxCpu_reg.h  IfxCpu_regdef.h  IfxDma_bf.h  IfxDma_reg.h  IfxDma_regdef.h  IfxDmu_bf.h  IfxDmu_reg.h  IfxDmu_regdef.h  IfxDom_bf.h  IfxDom_reg.h  IfxDom_regdef.h  IfxEbcu_bf.h  IfxEbcu_reg.h  IfxEbcu_regdef.h  IfxEmem_bf.h  IfxEmem_mpu_bf.h  IfxEmem_mpu_reg.h  IfxEmem_mpu_regdef.h  IfxEmem_reg.h  IfxEmem_regdef.h  IfxEvadc_bf.h  (+69 more)
project-template/iLLD/iLLD_1_0_1_17_0__TC33AED/Src/BaseSw/Infra/Ssw/TC33AED/Tricore/: Ifx_Ssw_Infra.h  Ifx_Ssw_Tc0.c
project-template/linker-scripts/: Lcf_Hightec_Tricore_Dma.lsl  Lcf_Hightec_Tricore_Ppu.lsl
tricore-cli/: README.md  pyproject.toml
tricore-cli/src/: args.py  containers.py  tricorecli.py  utils.py
(+315 files in other folders)
