[project]
name = "tricore-cli"
version = "1.5"
authors = [{ name = "Francesco Mecatti" }]
description = "A utility script for interacting with containerized TriCore development environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["docker>=7.0.0"]

[project.urls]
Homepage = "https://github.com/mc-cat-tty/tricore-dev-env"
Issues = "https://github.com/mc-cat-tty/tricore-dev-env/issues"

[project.scripts]
tricorecli = "tricorecli:main"

[build-system]
requires = ["setuptools>=61.0", "rich>=13.7"]
build-backend = "setuptools.build_meta"